Bug 124920 - Cancel button Does Not Work on the InsertSection Dialog
Summary: Cancel button Does Not Work on the InsertSection Dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-04-23 16:23 UTC by Adalbert Hanßen
Modified: 2019-05-08 12:04 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
the menu which could not be cancelled (Insert Section dialog) (70.65 KB, image/png)
2019-04-23 16:23 UTC, Adalbert Hanßen
Details
simple text file for my demonstration of the error in the comment of 2019-04-29 (2.39 KB, text/plain)
2019-04-29 11:25 UTC, Adalbert Hanßen
Details
The menu which could not be cancelled in the test case of my comment (138.62 KB, image/png)
2019-04-29 11:29 UTC, Adalbert Hanßen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adalbert Hanßen 2019-04-23 16:23:32 UTC
Created attachment 150957 [details]
the menu which could not be cancelled (Insert Section dialog)

This bug report pertains to Version: 6.3.0.0.alpha0+
Build ID: 08557a159bde7dab626f36488c88af94d7da0deb
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-04-08_16:43:39
Locale: de-DE (de_DE.UTF-8); UI-Language: en-US
Calc: threaded
running on Xubuntu 16.04.04LTS (64 Bit).


I wanted to paste the link to a tar.gz file into a large document (~1000 pages). Unfortunately I did not press Shift+Ctl+V but instead Ctl+V . When I saw the dialog “insert section”, I immediately realized my error and I wanted to cancel it, because I did not want ti paste the whole tar.gz file into my document.
But clicking on Cancel did not work. It did not cancel the operation. I had to kill LibreOffficeWriter to get out of that situation.
Comment 1 Xisco Faulí 2019-04-23 23:24:01 UTC
I can't reproduce it in

Version: 6.3.0.0.alpha0+
Build ID: 0a04150b6eefb5feb7ecefaa5cd63dbac8c1574f
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Please attach a sample document, as this makes it easier for us to verify the bug. 
(Please note that the attachment will be public, remove any sensitive information before attaching it. 
See https://wiki.documentfoundation.org/QA/FAQ#How_can_I_eliminate_confidential_data_from_a_sample_document.3F for help on how to do so.)

I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
Comment 2 Adalbert Hanßen 2019-04-29 11:24:12 UTC
In order to reproduce the bug, one needs a fairly big odt document. I don‘t want to clutter the space of the bugzilla with such a sample, so let‘s misuse a publicly available one.
I have chosen this nice manual for my test (saying to its authors “excuse me for misusing your nice work just as test material”!): https://documentation.libreoffice.org/assets/Uploads/Documentation/en/GS6.0/GS60-GettingStartedLO.odt
It is a 394 pages document. It is already big enough to show the bug.
Meanwhile I have found that the bug even shows up when pasting a fairly small txt-file. It is not necessary to use a large tar.gz file which really is nonsense to paste into an odt document!
So just mark all lines in this bug report, copy them to the clipboard and paste and store them to some text file Sample.txt.
Now click your file Sample.txt in your file browser and click on it. Then pres Ctl+C to copy the file location to the clipboard.
Then open the aforementioned GS60-GettingStartedLO.odt and go after the headline „Who is this book for?” and before the word “Anyone” on page 10.
Then “inadvertently” do Ctl-V there (supposing you actually would like to paste a hyperlink to that file but you did wrong: you should have done Shift+Ctl+V to paste special rather the file itself. You will see a screen like the one in my original post. You detect your error and you want to stop pasting the file and click on “Cancel”. The button gets pressed but nothing else happens. 
I found no other way than to end LibreOfficeWriter by the x button on its right top and then ignoring the message after some seconds that LibreOffice seems to be busy but does not respond or to kill it by the task manager. 
I would expect to be able to get out of that situation by either “Cancel” or by “Reset”.
Comment 3 Adalbert Hanßen 2019-04-29 11:25:49 UTC
Created attachment 151065 [details]
simple text file for my demonstration of the error in the comment of 2019-04-29
Comment 4 Adalbert Hanßen 2019-04-29 11:29:10 UTC
Created attachment 151066 [details]
The menu which could not be cancelled in the test case of my comment
Comment 5 raal 2019-04-29 15:38:46 UTC
Confirm Version: 6.3.0.0.alpha0+
Build ID: 73df787fe2c66d16cec08d28e383a72fe3855bfd
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3;
Comment 6 raal 2019-04-29 16:01:00 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 fc774aa0183450ee6c9ba107a3137dba862c0d33 is the first bad commit
commit fc774aa0183450ee6c9ba107a3137dba862c0d33
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Mar 15 13:18:24 2019 +0100

    source aeec817fe1205eba88089569ef26bff819d1fdac

author	Caolán McNamara <caolanm@redhat.com>	2019-03-14 16:49:04 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2019-03-15 09:59:33 +0100
commit aeec817fe1205eba88089569ef26bff819d1fdac (patch)
tree c5685075bd803e1b2ee7fb2ea2be4567d0618262
parent a98bb35d4e11471cee6b3dbf66b2c3d25df39bfa (diff)
weld SwInsertSectionTabDialog
Comment 7 raal 2019-04-29 16:04:23 UTC
in console: (soffice:19640): Gtk-WARNING **: 18:03:24.099: ../../../../gtk/gtkwidget.c:8584: widget not within a GtkWindow
Comment 8 Commit Notification 2019-04-30 10:32:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/6e07375f92f79959cc9288bb2a3b237b480e952c%5E%21

Resolves: tdf#124920 insert section from clipboard dialog doesn't cancel

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Adalbert Hanßen 2019-05-08 12:04:48 UTC
I have tested the correction using 
Version: 6.3.0.0.alpha0+, 
Build ID: 98630a0bd49bd80652145a21e4e0d0ded792b36b, 
CPU threads: 4; 
OS: Linux 4.4; 
UI render: default; 
VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, 
Branch:master, 
Time: 2019-05-04_04:44:35, 
Locale: de-DE (de_DE.UTF-8); 
UI-Language: en-US, 
Calc: threaded

The bug is corrected: If I try to paste a path to a tar.gz file, the link is automatically pasted without the dialogue even after Ctl-v (rather than Shift+Ctl+V). The same is true if I try to paste a path to a pdf file or to a tiff file. (If I would try to insert the tiff file as a picture, I get the error message "unknown file format" - probably LibreOffice can't deal with tiff files.