Resolves: tdf#124920 insert section from clipboard dialog doesn't cancel

Change-Id: Ic85cea08a9730cbd87d4ba1344ee6ddaa1b9d7bb
Reviewed-on: https://gerrit.libreoffice.org/71567
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>